# enhancer

./: .travis.yml  CMakeLists.txt  README.md
.github/workflows/: macos.yml  ubuntu.yml
docs/scripts/: composite.py
include/: enhancer.hpp
include/enhancer/: enhancer.hpp  enhancerwidget.hpp
shaders/: enhancer.fs  enhancer.vs
src/: enhancerwidget.cpp
tests/cpp-export-test/: CMakeLists.txt  main.cpp
tests/simple-widget-test/: main.cpp
